--- a/wetin/src/pages/Home/Home.module.css
+++ b/wetin/src/pages/Home/Home.module.css
@@ -1,10 +1,11 @@
-html {
-    width: 100%;
-    height: 100%;
-    background-image: url(../../utils/assets/fundoHome.png);
+
+
+body {
+    /* background-image: url(../../utils/assets/fundoHome.png); */
     background-repeat: no-repeat;
     background-size: 100% auto;
 }
+
 
 /* -------------------  banner --------------- */
 .container-banner {
