--- a/wetin/src/utils/globals.css
+++ b/wetin/src/utils/globals.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+* {
+    font-family: 'Quicksand', sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
 
 body {
@@ -9,3 +14,4 @@ body {
     color: #FFFF;
     font-family: 'Quicksand', sans-serif;
 }
+
