--- a/wetin/src/pages/Login/Login.module.css
+++ b/wetin/src/pages/Login/Login.module.css
@@ -88,9 +88,10 @@
     width: 2vw;
     position: fixed;
     left: 65%;
-    top: 64.4%;
+    top: 62%;
+    cursor: pointer;
+} 
 
-}
 
 .inputLoginSenha {
     height: 6vh;
@@ -101,6 +102,22 @@
     background: #E2E2E2;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
     width: 100%;
+}
+
+input{
+    all: unset;
+    color: black;
+}
+
+.msgEsquecerSenha{
+    color: black;
+    font-size: smaller;
+    font-weight: 500;
+    display: flex;
+    width: 100%;
+    flex-direction: row-reverse;
+    margin-top: 1%;
+    cursor: pointer;
 }
 
 .btEntrar{
