--- a/wetin/src/components/BlocoRecuperar/blocoRecuperar.module.css
+++ b/wetin/src/components/BlocoRecuperar/blocoRecuperar.module.css
@@ -1,13 +1,3 @@
-.fundoPag {
-    width: 100%;
-    height: 100vh;
-    background-image: url(../../utils/assets/solucao.png);
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
 
 .containner_login {
     width: 100%;
@@ -24,7 +14,7 @@
     flex-direction: column;
     background: #F2F2F2;
     box-shadow: 48px 163px 48px 0px rgba(0, 0, 0, 0.00), 31px 104px 43px 0px rgba(0, 0, 0, 0.01), 17px 59px 37px 0px rgba(0, 0, 0, 0.05), 8px 26px 27px 0px rgba(0, 0, 0, 0.09), 2px 7px 15px 0px rgba(0, 0, 0, 0.10);
-    height: 67vh;
+    height: 55vh;
     width: 44%;
     border-radius: 30px;
 }
@@ -35,21 +25,18 @@
     font-size: 2.5rem;
 }
 
-.blocoErro {
-    background-color: #9F1E1E;
-    width: 100%;
-    height: 8vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 600;
+.textoExplicativo{
+    width: 80%;
+    color: black;
+    width: 400;
+    font-size: 1.1rem;
 }
 
 .inputsBloco {
     display: flex;
     flex-direction: column;
-    width: 85%;
-    height: 40vh;
+    width: 80%;
+    height: 30vh;
     justify-content: space-around;
 }
 
@@ -58,6 +45,7 @@
     flex-direction: column;
     height: 12vh;
     justify-content: space-between;
+    width: 100%;
 }
 
 .inputEmail label {
@@ -74,9 +62,4 @@
     padding-left: 3%;
     background: #E2E2E2;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
-}
-
-input{
-    all: unset;
-    color: black;
 }
