--- a/wetin/src/pages/CriarSenha/criarSenha.module.css
+++ b/wetin/src/pages/CriarSenha/criarSenha.module.css
@@ -35,48 +35,17 @@
     font-size: 2.5rem;
 }
 
-.blocoErro {
-    background-color: #9F1E1E;
-    width: 100%;
-    height: 8vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 600;
+.textoExplicativo{
+    width: 80%;
+    color: black;
+    width: 400;
+    font-size: 1.1rem;
 }
 
 .inputsBloco {
     display: flex;
     flex-direction: column;
     width: 85%;
-    height: 40vh;
+    height: 30vh;
     justify-content: space-around;
-}
-
-.inputEmail {
-    display: flex;
-    flex-direction: column;
-    height: 12vh;
-    justify-content: space-between;
-}
-
-.inputEmail label {
-    color: #025373;
-    font-weight: 700;
-    font-size: 1.3rem;
-}
-
-.inputLoginEmail {
-    height: 6vh;
-    border-radius: 5px;
-    border: none;
-    font-size: 1rem;
-    padding-left: 3%;
-    background: #E2E2E2;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
-}
-
-input{
-    all: unset;
-    color: black;
 }
