--- a/wetin/src/pages/Home/Home.module.css
+++ b/wetin/src/pages/Home/Home.module.css
@@ -1,9 +1,14 @@
-
-
-body {
-    /* background-image: url(../../utils/assets/fundoHome.png); */
+.fundoPag {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../../utils/assets/fundoHome.png);
     background-repeat: no-repeat;
     background-size: 100% auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    z-index: -9999;
+    position: fixed;
 }
 
 
