--- a/wetin/src/pages/Solucao/Solucao.module.css
+++ b/wetin/src/pages/Solucao/Solucao.module.css
@@ -1,8 +1,13 @@
 
-body {
+.fundoPag {
+    width: 100%;
+    height: 100vh;
     background-image: url(../../utils/assets/solucao.png);
     background-repeat: no-repeat;
     background-size: 100% auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .imgSolucao{
