--- a/wetin/src/pages/Home/Home.module.css
+++ b/wetin/src/pages/Home/Home.module.css
@@ -71,6 +71,10 @@
     border: none;
 }
 
+.btCad:hover {
+    background: linear-gradient(0deg, #044057 0%, #025373 100%);
+}
+
 .btSm {
     display: flex;
     justify-content: center;
@@ -87,3 +91,6 @@
     border: 1px solid #025373;
 }
 
+.btSm:hover {
+    background: linear-gradient(0deg, #b4b4b4 0%, #b4b4b4 100%);
+}
