--- a/wetin/src/components/inputSenha/Input.module.css
+++ b/wetin/src/components/inputSenha/Input.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 15vh;
-    width: 97%;
+    width: 100%;
     justify-content: space-between;
 }
 
@@ -12,31 +12,36 @@
     font-size: 1.3rem;
 }
 
-.teste{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-}
-
 .inputSenha img{
-    width: 2vw;
-    position: fixed;
-    left: 65%;
-    top: 62%;
     cursor: pointer;
 } 
-
 
 .inputLoginSenha {
     height: 6vh;
     border-radius: 5px;
     border: none;
     font-size: 1rem;
-    padding-left: 3%;
+    padding-left: 2%;
+    width: 85%;
+}   
+
+.input{
+    display: flex;
     background: #E2E2E2;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
     width: 100%;
-}   
+    height: 6vh;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+.divImg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 6vh;
+    width: 10%;
+}
 
 input{
     all: unset;
