--- a/wetin/src/pages/CadastroCandidato/Perfil/Perfil.module.css
+++ b/wetin/src/pages/CadastroCandidato/Perfil/Perfil.module.css
@@ -1,7 +1,7 @@
 .fundoPag {
     width: 100%;
     height: 100vh;
-    background-image: url(../..//utils/assets/solucao.png);
+    background-image: url(../../..//utils/assets/solucao.png);
     background-repeat: no-repeat;
     background-size: 100% auto;
     display: flex;
@@ -37,7 +37,9 @@
     font-size: 1.3rem;
     height: 10vh;
     display: flex;
+    width: 80%;
     align-items: center;
+    text-align: center;
 }
 
 .inputsBloco {
