--- a/wetin/src/pages/CadastroCandidato/Questionario/questionario.module.css
+++ b/wetin/src/pages/CadastroCandidato/Questionario/questionario.module.css
@@ -1,7 +1,7 @@
 .fundoPag {
     width: 100%;
     height: 100vh;
-    background-image: url(../..//utils/assets/solucao.png);
+    background-image: url(../../..//utils/assets/solucao.png);
     background-repeat: no-repeat;
     background-size: 100% auto;
     display: flex;
@@ -37,14 +37,16 @@
     font-size: 1.3rem;
     height: 10vh;
     display: flex;
+    width: 80%;
     align-items: center;
+    text-align: center;
 }
 
-.inputsBloco {
+.perguntasBloco {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 45vh;
+    height: 50vh;
     width: 90%;
 }
