--- a/wetin/src/pages/CadastroRecrutador/Pagamento/pagamento.module.css
+++ b/wetin/src/pages/CadastroRecrutador/Pagamento/pagamento.module.css
@@ -1,7 +1,7 @@
 .fundoPag {
     width: 100%;
     height: 100vh;
-    background-image: url(../..//utils/assets/solucao.png);
+    background-image: url(../../../utils/assets/solucao.png);
     background-repeat: no-repeat;
     background-size: 100% auto;
     display: flex;
@@ -10,6 +10,7 @@
     z-index: -9999;
     position: fixed;
 }
+
 
 .container {
     display: flex;
@@ -33,11 +34,22 @@
 
 .tituloBloco {
     color: #025373;
-    font-weight: 800;
+    font-weight: 600;
     font-size: 1.3rem;
-    height: 10vh;
+    height: 18vh;
     display: flex;
     align-items: center;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.infos{
+    color: black;
+    font-weight: 500;
+    width: 80%;
+    font-size: 1.2rem;
+    text-align: left;
 }
 
 .inputsBloco {
@@ -48,3 +60,27 @@
     height: 45vh;
     width: 90%;
 }
+
+
+.InputDiv{
+    display: flex;
+    width: 80%;
+    align-items: center;
+}
+
+.labelDiv{
+    color: #025373;
+    width: 17%;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+.input{
+    background: #E2E2E2;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset; 
+    border-radius: 5px;
+    height: 6vh;
+    padding-left: 3%;
+    width: 75%;
+}
+
