--- a/wetin/src/pages/Login/CriarSenha/criarSenha.module.css
+++ b/wetin/src/pages/Login/CriarSenha/criarSenha.module.css
@@ -1,7 +1,7 @@
 .fundoPag {
     width: 100%;
     height: 100vh;
-    background-image: url(../../utils/assets/solucao.png);
+    background-image: url(../../../utils/assets/solucao.png);
     background-repeat: no-repeat;
     background-size: 100% auto;
     display: flex;
