--- a/wetin/src/pages/Login/Login.module.css
+++ b/wetin/src/pages/Login/Login.module.css
@@ -39,7 +39,7 @@
     background-color: #9F1E1E;
     width: 100%;
     height: 8vh;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     font-weight: 600;
