--- a/wetin/src/pages/Solucao/Solucao.module.css
+++ b/wetin/src/pages/Solucao/Solucao.module.css
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    z-index: -9999;
+    position: fixed;
 }
 
 .imgSolucao{
@@ -20,22 +22,83 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 8%;
+    margin-top: 1.5%;
+    flex-direction: column;
 }
 
 .solucao{
-    width: 80%;
+    width: 100%;
     display: flex;
+    height: 60vh;
+    align-items: center;
+    gap: 1rem;
+}
+
+.navegacaoBolinha{
+    height: 27vh;
+    width: 3%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.navegacaoBolinha div{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.pag1{
+    background-color: #025373;
+}
+
+.pag2{
+    background-color: #373E41;
+}
+
+.conteudo{
+    width: 85%;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    gap: 6rem;
 }
 
 .texto_solucao{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 50%;
+    width: 43%;
+    height: 50vh;
+}
+
+.titulo_solucao{
+    font-size: 2.5rem;
+    color: #025373;
+    font-weight: 700;
+}
+
+.explicacao_solucao{
+    color: black;
+    font-size: 1.1rem;
+}
+
+.imgs{
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .imgSolucao{
-    width: 20vw;
-    height: 40vh;
+    width: 30vw;
+    height: 55vh;
+}
+
+
+.iconNavegacao img{
+    cursor: pointer;
 }
