--- a/wetin/src/pages/CadastroRecrutador/NovoCadastro/CadastroImg.module.css
+++ b/wetin/src/pages/CadastroRecrutador/NovoCadastro/CadastroImg.module.css
@@ -1,7 +1,7 @@
 .fundoPag {
     width: 100%;
     height: 100vh;
-    background-image: url(../../../utils/assets/solucao.png);
+    background-image: url(../../..//utils/assets/solucao.png);
     background-repeat: no-repeat;
     background-size: 100% auto;
     display: flex;
@@ -10,7 +10,6 @@
     z-index: -9999;
     position: fixed;
 }
-
 
 .container {
     display: flex;
@@ -34,14 +33,13 @@
 
 .tituloBloco {
     color: #025373;
-    font-weight: 600;
+    font-weight: 800;
     font-size: 1.3rem;
     height: 10vh;
-    width: 75%;
     display: flex;
     align-items: center;
-    text-align: center;
 }
+
 
 .botoes {
     width: 90%;
@@ -79,7 +77,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 45vh;
+    height: 40vh;
     width: 90%;
 }
 
@@ -88,13 +86,13 @@ form{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 45vh;
+    height: 40vh;
     width: 100%;
 }
 
 .InputDiv{
     display: flex;
-    width: 80%;
+    width: 40%;
     flex-direction: column;
 }
 
@@ -116,5 +114,98 @@ form{
     background: #e2e2e200;
     border-radius: 5px;
     height: 6vh;
+    padding-left:1%;
+}
+
+.infosEmpresa{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    height: 22vh;
+}
+
+.informacoesContatoEmpresa{
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+}
+
+.informacoes{
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+}
+
+.alinhamento{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 20vh;
+    justify-content: space-around;
+    font-weight: 700;
+    font-size: 1.1rem;
+    color: #000000;
+}
+
+
+.arrastarArquivo {
+    background-color: #E2E2E2;
+    border-radius: 5px;
+    width: 60%;
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 23px 14px 7px 0px rgba(0, 0, 0, 0.00), 14px 9px 7px 0px rgba(0, 0, 0, 0.01), 8px 5px 6px 0px rgba(0, 0, 0, 0.05), 4px 2px 4px 0px rgba(0, 0, 0, 0.09), 1px 1px 2px 0px rgba(0, 0, 0, 0.10);
+}
+
+.texto{
+    border: dashed 3px #025373;
+    width: 85%;
+    border-radius: 5px;
+    height: 11vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.texto span{
+    color: black;
+    font-weight: 500;
+    font-size: 0.6rem;
+    width: 80%;
+    cursor: pointer;
+}
+
+.caixaImagem{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.iconeImg{
+    background-color: #a0a0a0;
+    height: 13vh;
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.inputDescricao{
+    height: 12vh;
+    background: #E2E2E2;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset; 
+    border-radius: 5px;
     padding-left: 3%;
+}
+
+.InputDesc{
+    display: flex;
+    width: 40%;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 20vh;
 }
