--- a/wetin/src/pages/SobreNos/Contato/Contato.module.css
+++ b/wetin/src/pages/SobreNos/Contato/Contato.module.css
@@ -1,12 +1,12 @@
 .fundoPag {
     width: 100%;
     height: 100vh;
-    background-image: url(../../utils/assets/fundoBeneficio.png);
+    background-image: url(../../../utils/assets/fundoContato.png);
     background-repeat: no-repeat;
     background-size: 100% auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     position: fixed;
     z-index: -1;
 }
@@ -14,7 +14,7 @@
 .container-header{
     display: flex;
     justify-content: center;
-    height: 13vh;
+    height: 12vh;
     width: 100%;
     background-color: rgba(240, 255, 255, 0);
     z-index: 999;
@@ -87,55 +87,50 @@
 }
 
 .pag2{
+    background-color: #373E41;
+}
+
+.pag3{
     background-color: #025373;
 }
 
-.container_beneficios{
-    width: 97%;
-    height: 70vh;
+.containerContato{
     display: flex;
+    justify-content: center;
     align-items: center;
+    width: 97%;
+    height: 75vh;
     margin-top: 5%;
 }
 
-.beneficios{
-    width: 95%;
+.caixaContato{
+    width: 90%;
     height: 70vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.beneficios img{
-    width: 25vw;
-    height: 55vh;
-    margin-left: 5%;
+.informacoes{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 40%;
+    height: 40vh;
 }
 
-.textos_beneficios{
+.imagemContato{
     width: 50%;
-    height: 50vh;
+    height: 70vh;
     display: flex;
-    justify-content: space-around;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.titulo_beneficios{
-    color: #025373;
-    font-weight: 700;
-    font-size: 2.7rem;
-    display: flex;
-    width: 85%;
-}
-
-.lista_beneficios{
-    display: flex;
-    flex-direction: column;
-    height: 30vh;
-    justify-content: space-around;
-    color: black;
-    font-size: large;
-    width: 85%;
+.imagemContato img{
+    height: 65vh;
+    border-radius: 20px;
+    filter: drop-shadow(3px 4px 10px rgba(0, 0, 0, 0.12)) drop-shadow(12px 14px 19px rgba(0, 0, 0, 0.10)) drop-shadow(27px 32px 25px rgba(0, 0, 0, 0.06)) drop-shadow(48px 57px 30px rgba(0, 0, 0, 0.02)) drop-shadow(75px 89px 33px rgba(0, 0, 0, 0.00));
 }
 
 .Navegador{
@@ -146,3 +141,58 @@
     align-items: center;
     margin-left: 2.5%;
 }
+
+.tituloContato{
+    font-weight: 700;
+    color: #025373;
+    font-size: 2.2rem;
+
+}
+
+.negrito{
+    font-weight: 700;
+}
+
+.horarios{
+    display: flex;
+    flex-direction: column;
+    color: black;
+    width: 50%;
+    height: 10vh;
+    justify-content: space-around;
+    font-size: 1.1rem;
+}
+
+.informacoesContato{
+    display: flex;
+    flex-direction: column;
+    font-size: 1.1rem;
+    color: black;
+    justify-content: space-around;
+    height: 7vh;
+}
+
+.informacoesContato div{
+    display: flex;
+    gap: 0.5rem;
+}
+
+.endereco{
+    display: flex;
+    flex-direction: column;
+    color: black;
+    height: 8vh;
+    justify-content: space-around;
+    font-size: 1.1rem;
+    gap: 0.2rem;
+}
+
+.Navegador{
+    margin-top: 39%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2.5%;
+}
+
