--- a/wetin/src/components/Sidebar/SidebarCollapsed/SidebarCollapsed.module.css
+++ b/wetin/src/components/Sidebar/SidebarCollapsed/SidebarCollapsed.module.css
@@ -8,7 +8,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 30px 0;
-    margin: 8px;
+    margin: 8px 0px 8px 8px;
     width: 108px;
 }
 
