--- a/wetin/src/utils/globals.css
+++ b/wetin/src/utils/globals.css
@@ -3,6 +3,7 @@
     font-family: 'Quicksand', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 
@@ -14,4 +15,21 @@ body {
     color: #FFFF;
     font-family: 'Quicksand', sans-serif;
 }
+
+*::-webkit-scrollbar {
+    width: 0.5em;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #373e41;
+    box-shadow: inset 0.05em 0 0 #838383;
+    border-radius: 20px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background: #f2b705;
+    border-radius: 0.5em;
+    box-shadow: inset 0.15em 0.1em 0.1em rgba(255, 255, 255, 0.5),
+      inset -0.15em -0.1em -0.1em  rgba(0, 0, 0, 0.3);
+  }
 
