--- a/wetin/src/components/Icon/Icon.module.css
+++ b/wetin/src/components/Icon/Icon.module.css
@@ -1,4 +1,7 @@
 .icon{
-    width: 40px;
-    height: 40px;
+    width: min(5vw, 5vh); 
+    height: min(5vw, 5vh); 
+    max-width: 40px;
+    max-height: 40px;
+    cursor: pointer;
 }
