--- a/wetin/src/utils/globals.css
+++ b/wetin/src/utils/globals.css
@@ -24,6 +24,7 @@ body {
     background: #373e41;
     box-shadow: inset 0.05em 0 0 #838383;
     border-radius: 20px;
+    margin: 40px 0px;
   }
 
   *::-webkit-scrollbar-thumb {
