--- a/wetin/src/pages/CadastroRecrutador/NovoCadastro/CadastroImg.module.css
+++ b/wetin/src/pages/CadastroRecrutador/NovoCadastro/CadastroImg.module.css
@@ -199,7 +199,9 @@ form{
     background: #E2E2E2;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset; 
     border-radius: 5px;
-    padding-left: 3%;
+    padding: 3%;
+    font-size: 1rem;
+    border: none;
 }
 
 .InputDesc{
