--- a/wetin/src/pages/Dashboard/PublicarVaga/PublicarVaga.module.css
+++ b/wetin/src/pages/Dashboard/PublicarVaga/PublicarVaga.module.css
@@ -25,7 +25,7 @@
 }
 
 .caixaFormulario{
-    background-color: #fff;
+    background-color: #F2F2F2;
     width: 90%;
     height: 80vh;
     display: flex;
