--- a/wetin/src/components/PainelDeControle/PainelDeControle.module.css
+++ b/wetin/src/components/PainelDeControle/PainelDeControle.module.css
@@ -1,6 +1,7 @@
 .painel-de-controle {
     height: calc(100vh - 16px);
     width: 328px;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,6 +10,7 @@
     border-radius: 20px;
     padding: 24px;
     gap: 8px;
+    margin-right: 8px;
 }
 
 .painel-de-controle h2 {
