--- a/wetin/src/components/Cards/CardCandidatoExtendido/CardCandidatoExtendido.module.css
+++ b/wetin/src/components/Cards/CardCandidatoExtendido/CardCandidatoExtendido.module.css
@@ -10,6 +10,7 @@
     box-shadow: 23px 14px 7px rgba(0, 0, 0, 0), 14px 9px 7px rgba(0, 0, 0, 0.01), 8px 5px 6px rgba(0, 0, 0, 0.05), 4px 2px 4px rgba(0, 0, 0, 0.09), 1px 1px 2px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     margin-bottom: 35px;
+    cursor: pointer;
 }
 
 .recomendacao {
