--- a/wetin/src/components/Cards/CardVaga/CardVaga.module.css
+++ b/wetin/src/components/Cards/CardVaga/CardVaga.module.css
@@ -107,6 +107,7 @@
     border-radius: 10px;
     cursor: pointer;
     overflow: hidden;
+    z-index: 1001;
 }
 
 .botao-editar:hover{
@@ -122,7 +123,7 @@
     border-radius: 10px;
     cursor: pointer;
     overflow: hidden;
-   
+    z-index: 1001;
 }
 
 
