--- a/wetin/src/pages/Dashboard/CandidatosFavoritos/CandidatosFavoritos.module.css
+++ b/wetin/src/pages/Dashboard/CandidatosFavoritos/CandidatosFavoritos.module.css
@@ -26,10 +26,11 @@
 .caixa-cards {
     padding: 8px;
     display: flex;
+    gap: 16px;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
     overflow-y: scroll;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
