--- a/wetin/src/pages/CadastroCandidato/DescricaoAnexo/CadastroImg.module.css
+++ b/wetin/src/pages/CadastroCandidato/DescricaoAnexo/CadastroImg.module.css
@@ -98,7 +98,7 @@ form{
 
 .labelDiv{
     color: #000000;
-    width: 80%;
+    width: 100%;
     font-weight: 700;
     font-size: 1.1rem;
     display: flex;
@@ -119,7 +119,7 @@ form{
 
 .infosEmpresa{
     display: flex;
-    width: 100%;
+    width: 90%;
     justify-content: space-around;
     height: 22vh;
 }
@@ -194,18 +194,27 @@ form{
     border-radius: 10px;
 }
 
+
 .inputDescricao{
     height: 12vh;
     background: #E2E2E2;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset; 
     border-radius: 5px;
-    padding-left: 3%;
+    padding: 3%;
+    font-size: 1rem;
+    border: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .InputDesc{
     display: flex;
-    width: 40%;
+    width: 60%;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     height: 20vh;
 }
