--- a/wetin/src/pages/CadastroCandidato/Experiencia/PagExperiencia.module.css
+++ b/wetin/src/pages/CadastroCandidato/Experiencia/PagExperiencia.module.css
@@ -6,7 +6,6 @@
     background-size: 100% auto;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
     z-index: -9999;
     position: fixed;
 }
@@ -31,74 +30,55 @@
     border-radius: 30px;
 }
 
+
 .tituloBloco {
     color: #025373;
-    font-weight: 800;
-    font-size: 1.3rem;
-    height: 10vh;
+    font-weight: 700;
+    font-size: 1.5rem;
+    height: 18vh;
     display: flex;
-    width: 80%;
     align-items: center;
     text-align: center;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.infos{
+    color: black;
+    font-weight: 500;
+    width: 80%;
+    font-size: 1.2rem;
+    text-align: left;
 }
 
 .inputsBloco {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 45vh;
-    width: 90%;
-}
-
-.blocoAnexo {
-    display: flex;
-    height: 40vh;
-    width: 100%;
     justify-content: space-around;
+    align-items: center;
+    height: 35vh;
+    width: 90%;
+    overflow-y: scroll;
+    gap: 25px;
 }
 
-.perfil {
-    background-color: #a0a0a0;
-    width: 25%;
-    height: 25vh;
-    border-radius: 20px;
-}
-
-.arquivo {
+.botaoExperiencia{
+    width: 80%;
+    height: 7vh;
     display: flex;
-    flex-direction: column;
-    width: 70%;
-    color: #025373;
-    font-size: 1.3rem;
+    align-items: center;
+    margin-top: 2%;
+}
+
+.botaoExperiencia button{
+    padding: 1.3% 2%;
+    border-radius: 10px;
+    border:solid 1px #025373;
+    box-shadow: 23px 14px 7px 0px rgba(0, 0, 0, 0.00), 14px 9px 7px 0px rgba(0, 0, 0, 0.01), 8px 5px 6px 0px rgba(0, 0, 0, 0.05), 4px 2px 4px 0px rgba(0, 0, 0, 0.09), 1px 1px 2px 0px rgba(0, 0, 0, 0.10);    background-color: #025373;
+    color: #F2F2F2;
     font-weight: 700;
-    gap: 15px;
-}
-
-.arrastarArquivo {
-    background-color: #E2E2E2;
-    border-radius: 5px;
-    width: 100%;
-    height: 30vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 23px 14px 7px 0px rgba(0, 0, 0, 0.00), 14px 9px 7px 0px rgba(0, 0, 0, 0.01), 8px 5px 6px 0px rgba(0, 0, 0, 0.05), 4px 2px 4px 0px rgba(0, 0, 0, 0.09), 1px 1px 2px 0px rgba(0, 0, 0, 0.10);
-}
-
-.texto{
-    border: dashed 3px #025373;
-    width: 85%;
-    border-radius: 5px;
-    height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.texto span{
-    color: black;
-    font-weight: 500;
-    font-size: 0.9rem;
-    width: 60%;
+    font-size: 1.1rem;
+    cursor: pointer;
+    height: 6vh;
+    text-align: center;
 }
