--- a/wetin/src/pages/CadastroRecrutador/CadastroRecrutador.module.css
+++ b/wetin/src/pages/CadastroRecrutador/CadastroRecrutador.module.css
@@ -98,16 +98,17 @@ form{
 
 .labelDiv{
     color: #000000;
-    width: 80%;
+    width: 100%;
     font-weight: 700;
     font-size: 1.1rem;
     display: flex;
+    flex-direction: column;
     gap: 5px;
 }
 
 .labelDiv span{
     color: red;
-    display: none;
+    font-size: 0.5rem;
 }
 
 .input{
