--- a/wetin/src/components/BarraPesquisa/BarraPesquisa.module.css
+++ b/wetin/src/components/BarraPesquisa/BarraPesquisa.module.css
@@ -1,3 +1,8 @@
+.search-bar-container {
+    position: relative;
+    width: 100%;
+}
+
 .search-bar {
     max-height: 64px;
     flex: 1;
@@ -21,6 +26,11 @@
     margin-right: 16px;
 }
 
+.lupa {
+    width: 100%;
+    height: 100%;
+}
+
 .search-input {
     color: var(--Cinza-azulado-Escuro, var(--Outer-Space-900, #373E41));
     font-feature-settings: 'clig' off, 'liga' off;
@@ -30,4 +40,32 @@
     font-weight: 400;
     line-height: 20px;
     width: 100%;
+    border: none;
+    outline: none;
+    background: transparent;
+}
+
+.history {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: #f2f2f2;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    max-height: 200px;
+    overflow-y: auto;
+    z-index: 1000;
+    margin-top: 8px;
+}
+
+.history-item {
+    padding: 8px 8px;
+    border-bottom: 1px solid #ccc;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.history-item:hover {
+    background-color: #e0e0e0;
 }
