--- a/wetin/src/components/PopUps/PopUpSuccess/PopUpSuccess.module.css
+++ b/wetin/src/components/PopUps/PopUpSuccess/PopUpSuccess.module.css
@@ -1,3 +1,16 @@
+.overlay{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.90);
+    position: absolute;
+    z-index: 1003;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .pop-up {
     width: 960px;
     height: 640px;
@@ -9,6 +22,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #F2F2F2;
+    position: relative;
 }
 
 .mensagem-sucesso {
