--- a/wetin/src/pages/CadastroCandidato/Questionario/questionario.module.css
+++ b/wetin/src/pages/CadastroCandidato/Questionario/questionario.module.css
@@ -50,3 +50,104 @@
     height: 50vh;
     width: 90%;
 }
+
+.pergunta {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 30vh;
+    width: 100%;
+}
+
+.respostas {
+    display: flex;
+    justify-content: space-around;
+    width: 95%;
+
+}
+
+.tituloPergunta {
+    color: black;
+    font-size: 1.2rem;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+
+.negrito {
+    font-weight: 800;
+}
+
+.discordoT {
+    background-color: #B66BF0;
+  }
+  
+  .discordoP {
+    background-color: #D5B2F0;
+  }
+  
+  .nemCnemD {
+    background-color: #D9D9D9;
+  }
+  
+  .concordoP {
+    background-color: #B8D5C7;
+  }
+  
+  .concordoT {
+    background-color: #5BC065;
+  }
+  
+  /* Estilos comuns para todas as bolinhas */
+  .bolinha {
+    width: 110px;
+    height: 110px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 0.8rem;
+    color: black;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 5px;
+    transition: box-shadow 0.3s ease;
+  }
+  
+  /* Estilo para a bolinha selecionada */
+  .selected {
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
+  }
+  .botoes {
+    width: 90%;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+}
+
+.btVoltar {
+    padding: 1.3% 4%;
+    border-radius: 15px;
+    border:solid 1px #025373;
+    box-shadow: 23px 14px 7px 0px rgba(0, 0, 0, 0.00), 14px 9px 7px 0px rgba(0, 0, 0, 0.01), 8px 5px 6px 0px rgba(0, 0, 0, 0.05), 4px 2px 4px 0px rgba(0, 0, 0, 0.09), 1px 1px 2px 0px rgba(0, 0, 0, 0.10);
+    color: #025373;
+    font-weight: 700;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+.btProximo {
+    padding: 1.3% 4%;
+    border-radius: 15px;
+    border:solid 1px #025373;
+    box-shadow: 23px 14px 7px 0px rgba(0, 0, 0, 0.00), 14px 9px 7px 0px rgba(0, 0, 0, 0.01), 8px 5px 6px 0px rgba(0, 0, 0, 0.05), 4px 2px 4px 0px rgba(0, 0, 0, 0.09), 1px 1px 2px 0px rgba(0, 0, 0, 0.10);    background-color: #025373;
+    color: #F2F2F2;
+    font-weight: 700;
+    font-size: 1.1rem;
+    cursor: pointer;
+
+}
